--- a/_includes/sections/about.html
+++ b/_includes/sections/about.html
@@ -29,10 +29,8 @@
     I'm an avid tennis tennis player, enjoy hanging out with friends and family, 
     and really love making food! 
     
-    This website is a complete portfolio of my academic
-    work and projects; the goal for this website is to be an outlet for displaying 
-    my passions :). Feel free to browse through the website to see what I've 
-    worked on so far, what my specific interests are, and learn more about me!
+    The goal for this website is to be an outlet for displaying 
+    my passions :). Feel free to browse through the website to see what my specific interests are and learn more about me!
 </div>
 
 
